# Loan-PreQualification-Service

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONSUMER_TESTS_FIX_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT.md.backup  INTEGRATION_TESTS_FIXED.md  Makefile  PHASE2_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PROGRESS.md  README.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_PLAN.md  alembic.ini  code-review-previous.md  code-review.md  code-review.md.backup  conftest.py  docker-compose.yml  pyproject.toml  run_tests.sh  tech-design-review.md  tech-design.md
.claude/commands/: code-review.md  development.md  tech-deisgn-review.md  tech-design.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py
docs/: requirements.md
services/credit-service/: Dockerfile  README.md  pyproject.toml
services/credit-service/app/: main.py
services/credit-service/app/consumers/: credit_consumer.py
services/credit-service/app/services/: credit_service.py
services/credit-service/tests/unit/: test_credit_consumer.py  test_credit_service.py
services/decision-service/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/decision-service/app/: main.py
services/decision-service/app/consumers/: decision_consumer.py
services/decision-service/app/repositories/: application_repository.py
services/decision-service/app/services/: decision_service.py
services/decision-service/tests/unit/: test_application_repository.py  test_decision_consumer.py  test_decision_consumer.py.bak  test_decision_service.py
services/prequal-api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/prequal-api/app/: main.py
services/prequal-api/app/api/routes/: applications.py  health.py
services/prequal-api/app/kafka/: producer.py
services/prequal-api/app/services/: application_service.py
services/prequal-api/tests/integration/: README.md  test_api_endpoints.py  test_repository.py  test_repository.py.bak2
services/prequal-api/tests/unit/: test_application_repository.py  test_application_repository.py.bak  test_application_repository.py.bak2  test_application_service.py  test_application_service.py.bak  test_application_service.py.bak2  test_kafka_producer.py  test_kafka_producer.py.bak
services/shared/: README.md  pyproject.toml
services/shared/shared/core/: config.py  database.py  logging.py
services/shared/shared/exceptions/: exceptions.py
services/shared/shared/models/: application.py
services/shared/shared/schemas/: application.py  kafka_messages.py
src/app/core/: config.py  database.py  logging.py
src/app/models/: application.py
