[tool.poetry]
name = "loan-prequalification-service"
version = "1.0.0"
description = "Event-driven microservices system for loan prequalification in Indian financial market"
authors = ["Development Team"]
readme = "README.md"
# Note: This is a monorepo with multiple microservices in services/ directory
# Each service has its own pyproject.toml

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.0"}
pydantic-settings = "^2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30.0"
alembic = "^1.12.0"
aiokafka = "^0.12.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
pybreaker = "^1.0.1"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"
black = "^23.10.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = ["get-pip.py"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka.*", "pybreaker.*", "alembic.*", "sqlalchemy.dialects.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/prequal-api/tests", "services/credit-service/tests", "services/decision-service/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=services --cov-report=term-missing --cov-report=html --cov-fail-under=85"
filterwarnings = [
    "ignore::DeprecationWarning"
]
markers = [
    "integration: marks tests as integration tests (require infrastructure)",
    "e2e: marks tests as end-to-end tests (require full system)",
]

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/get-pip.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
