[tool.poetry]
name = "prequal-api"
version = "1.0.0"
description = "Loan prequalification REST API service"
authors = ["Development Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
aiokafka = "^0.12.0"
asyncpg = "^0.30.0"
httpx = "^0.25.2"
loan-prequalification-shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"
black = "^23.10.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka.*", "alembic.*", "sqlalchemy.dialects.*"]
ignore_missing_imports = true
